--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.2.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.netflix.eureka</groupId>
+            <artifactId>eureka-client</artifactId>
+            <version>1.1.37</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
