--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.admin.enabled=true
 mybatis.type-aliases-package=com.ms.ihub.**VO
 #DATASOURCE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/examples
+spring.datasource.url=jdbc:mysql://localhost:3306/ihub
 spring.datasource.username=root
 spring.datasource.password=Saurav@2502
 spring.datasource.tomcat.testWhileIdle=true
@@ -26,3 +26,10 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 log4j.logger.org.hibernate.type=trace
 # Swagger config
 spring.profiles.active=swagger-enabled-for-qa 
+
+#Enable Discovery client
+spring.application.name=ihub
+spring.cloud.config.uri=http://localhost:9090
+eureka.client.serviceUrl.defaultZone:http://localhost:9091/eureka
+security.basic.enable: false   
+management.security.enabled: false
